tooling/nargo_cli/tests/snapshots/execution_success/regression_8329/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u8, y: u8, z: u8) -> pub u8 {
    let p: u8 = y - z;
    if p != 0_u8 {
        let a: u8 = x / z;
        let b: u8 = a - z;
        if b != 0_u8 {
            let _: u8 = a / b;
        }
    };
    let u: u8 = x - z;
    let v: u8 = y - u;
    v
}
