tooling/nargo_cli/tests/snapshots/execution_success/regression_8329/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: u1, v2: u1):
    (no terminator instruction)
}
[regression_8329] Circuit output: 1
